Fix bug - display on mobile

--- a/client/src/components/common/SectionTitle/SectionTitle.scss
+++ b/client/src/components/common/SectionTitle/SectionTitle.scss
@@ -21,3 +21,10 @@
         text-transform: uppercase;
     }
 }
+
+@media (max-width: 768px) {
+    
+    .section-title {
+        width: 100%;
+    }
+}
