--- a/client/src/components/features/Projects/SingleProject.scss
+++ b/client/src/components/features/Projects/SingleProject.scss
@@ -61,7 +61,7 @@
 
             .content-details{
                 top: 50%;
-                left: -20%;
+                left: -30%;
                 opacity: 1;
             }
         }
