--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -33,3 +33,10 @@ h5 {
     padding: 0 70px;
     margin-top: 5rem;
 }
+
+@media (max-width: 768px) {
+    
+    .content-wrapper {
+        justify-content: center;
+    }
+}
